# anaroot

./: .gitignore  readme.md  setup.sh  setup_software_anaroot.sh
src/sources/: CMakeLists.txt  Makefile.in  anaroot.C
src/sources/.libs/: libanaroot.la  libanaroot.lai  libanaroot.so.0.0.0  libanaroot.so.0.0.0T
src/sources/AnaLoop/: CMakeLists.txt  Makefile.in
src/sources/AnaLoop/Core/: CMakeLists.txt  Makefile.in  analoop_dict.cc  analoop_dict_rdict.pcm
src/sources/AnaLoop/Core/.deps/: analoop_dict.Plo
src/sources/AnaLoop/Core/.libs/: libanaloop.la  libanaloop.lai  libanaloop.so.0.0.0
src/sources/AnaLoop/Core/src/: TArtAnaFile.cc  TArtAnaLoop.cc
src/sources/AnaLoop/EncExample/: CMakeLists.txt  Makefile.in  analoopencexample_dict.cc  analoopencexample_dict_rdict.pcm  libanaloopencexample.la
src/sources/AnaLoop/EncExample/.deps/: analoopencexample_dict.Plo
src/sources/AnaLoop/EncExample/.libs/: libanaloopencexample.lai  libanaloopencexample.so.0.0.0
src/sources/AnaLoop/EncExample/src/: TAlEncESPRIExample.cc  TAlEncPIDExample.cc  TAlEncRPTOFExample.cc  TAlEncRawDataExample.cc  TAlEncSAMURAIDCExample.cc  TAlEncSAMURAIICExample.cc  TAlEncSAMURAIPlaExample.cc
src/sources/AnaLoop/Example/: CMakeLists.txt  Makefile.in  analoopexample_dict.cc  analoopexample_dict_rdict.pcm
src/sources/AnaLoop/Example/.deps/: analoopexample_dict.Plo
src/sources/AnaLoop/Example/.libs/: libanaloopexample.la  libanaloopexample.lai  libanaloopexample.so.0.0.0
src/sources/AnaLoop/Example/include/: TAlDALIExample.hh
src/sources/AnaLoop/Example/src/: TAlSAMURAIDCExample.cc  TAlSAMURAIExample.cc  TAlSAMURAIHODExample.cc  TAlWINDSExample.cc
src/sources/Core/: CMakeLists.txt  CMakeLists.txt~  Makefile.in  anacore_dict.cc  anacore_dict_rdict.pcm  anacore_linkdef.hh  anacore_linkdef.hh~  libanacore.la
src/sources/Core/.deps/: anacore_dict.Plo
src/sources/Core/.libs/: libanacore.lai  libanacore.so.0
src/sources/Core/include/: TArtDataObject.hh  TArtDataSource.hh  TArtDecoderAD413A.hh  TArtDecoderAMTTDC.hh  TArtDecoderCTM405.hh  TArtDecoderFeminos.hh  TArtDecoderFixed16.hh  TArtDecoderFixed24.hh  TArtDecoderLUPO.hh  TArtDecoderMTDC32.hh  TArtDecoderNeulandTS.hh  TArtDecoderP716XZ.hh  TArtDecoderTacquila.hh  TArtDecoderV1190C.hh  TArtDecoderV1290.hh  TArtDecoderV550.hh  TArtDecoderV767.hh  TArtDecoderVmeEasyroc.hh  TArtParserRDF.hh  TArtRawDataObject.hh  segidlist.hh
src/sources/Core/src/: TArtDecoderA3100.cc  TArtDecoderA3400.cc  TArtDecoderAD413A.cc  TArtDecoderAMTTDC.cc  TArtDecoderBigEndianV7XX.cc  TArtDecoderCTM405.cc  TArtDecoderDSP.cc  TArtDecoderFIT.cc  TArtDecoderFactory.cc  TArtDecoderFactory.cc~  TArtDecoderFixed16.cc  TArtDecoderFixed24.cc  TArtDecoderFixed32.cc  TArtDecoderHINP.cc  TArtDecoderL3377d.cc  TArtDecoderLUPO.cc  TArtDecoderMADC32.cc  TArtDecoderMDPP16.cc  TArtDecoderMQDC32.cc  TArtDecoderMTDC32.cc  TArtDecoderNeulandTS.cc  TArtDecoderP716X.cc  TArtDecoderP716XZ.cc  TArtDecoderRICHADCM.cc  TArtDecoderSIS3301.cc  TArtDecoderTacquila.cc  TArtDecoderV1190.cc  TArtDecoderV1190C.cc  TArtDecoderV1290.cc  TArtDecoderV1740.cc  TArtDecoderV550.cc  TArtDecoderV767.cc  TArtDecoderV7XX.cc  TArtDecoderV830.cc  TArtDecoderVmeEasyroc.cc  TArtFileDataSource.cc  TArtParserRDF.cc  TArtParserRIDF.cc  TArtSharedMemoryDataSource.cc  TArtStoreManager.cc  (+1 more)
src/sources/Nadeko/: CMakeLists.txt  Makefile.in  ananadeko_dict.cc  ananadeko_dict_rdict.pcm  libananadeko.la
src/sources/Nadeko/.deps/: ananadeko_dict.Plo
src/sources/Nadeko/.libs/: libananadeko.lai  libananadeko.so.0
src/sources/Nadeko/include/: TArtAlias.hh  TArtSimpleFunction.hh
src/sources/Nadeko/src/: TArtAlias.cc  TArtCanvasManager.cc  TArtSimpleFunction.cc  TArtTreeManager.cc
src/sources/Reconstruction/: CMakeLists.txt  Makefile.in
src/sources/Reconstruction/BigRIPS/: CMakeLists.txt  Makefile.in  anabrips_dict.cc  anabrips_dict_rdict.pcm  libanabrips.la
src/sources/Reconstruction/BigRIPS/.deps/: anabrips_dict.Plo
src/sources/Reconstruction/BigRIPS/.libs/: libanabrips.lai  libanabrips.so.0.0.0
src/sources/Reconstruction/BigRIPS/include/: TArtBeamPara.hh
src/sources/Reconstruction/BigRIPS/src/: TArtBigRIPSParameters.cc  TArtCalibCoin.cc  TArtCalibCoin.cc~  TArtCalibFocalPlane.cc  TArtCalibGe.cc  TArtCalibPID.cc  TArtCalibTKE.cc  TArtRecoBeam.cc
src/sources/Reconstruction/CATANA/: CMakeLists.txt  Makefile.in  anacatana_dict.cc  anacatana_dict_rdict.pcm  libanacatana.la
src/sources/Reconstruction/CATANA/.deps/: anacatana_dict.Plo
src/sources/Reconstruction/CATANA/.libs/: libanacatana.lai  libanacatana.so.0
src/sources/Reconstruction/CATANA/include/: TArtCATANACsI.hh  TArtCalibCATANA.hh
src/sources/Reconstruction/CATANA/src/: TArtCATANAParameters.cc  TArtCalibCATANA.cc
src/sources/Reconstruction/DALI/: CMakeLists.txt  Makefile.in  anadali_dict.cc  anadali_dict_rdict.pcm
src/sources/Reconstruction/DALI/.deps/: anadali_dict.Plo
src/sources/Reconstruction/DALI/.libs/: libanadali.la  libanadali.lai  libanadali.so.0
src/sources/Reconstruction/DALI/include/: TArtDALINaIPara.hh
src/sources/Reconstruction/DALI/src/: TArtCalibDALI.cc  TArtDALIParameters.cc
src/sources/Reconstruction/ESPRI/: CMakeLists.txt  Makefile.in  anaespri_dict.cc  anaespri_dict_rdict.pcm  libanaespri.la
src/sources/Reconstruction/ESPRI/.deps/: anaespri_dict.Plo
src/sources/Reconstruction/ESPRI/.libs/: libanaespri.lai  libanaespri.so.0.0.0
src/sources/Reconstruction/ESPRI/include/: TArtBLD.hh  TArtRDC.hh
src/sources/Reconstruction/ESPRI/src/: TArtCalibBDC.cc  TArtCalibBLD.cc  TArtCalibFADC.cc  TArtCalibPlas.cc  TArtCalibRDC.cc  TArtCalibRNaI.cc  (+2 more)
src/sources/Reconstruction/MINOS/: CMakeLists.txt  Makefile.in
src/sources/Reconstruction/SAMURAI/: CMakeLists.txt  CMakeLists.txt~  Makefile.in  anasamurai_linkdef.hh  anasamurai_linkdef.hh~
src/sources/Reconstruction/SILICONS/: CMakeLists.txt  Makefile.in  anasilicons_dict.cc  anasilicons_dict_rdict.pcm  anasilicons_linkdef.hh  libanasilicons.la
src/sources/Reconstruction/WINDS/: CMakeLists.txt  Makefile.in  anawinds_dict.cc  anawinds_dict_rdict.pcm  libanawinds.la
(+635 files in other folders)
